--- a/app/src/main/res/layout/game_detail.xml
+++ b/app/src/main/res/layout/game_detail.xml
@@ -7,9 +7,10 @@
 
     <ImageView
         android:id="@+id/ivRecebeFoto"
+        app:layout_constraintBottom_toTopOf="@id/tvRecebeNome"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,8 +20,8 @@
         android:id="@+id/tvRecebeNome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
         android:gravity="center_horizontal"
+        android:layout_marginBottom="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="16dp"
@@ -37,10 +38,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:gravity="center_horizontal"
         android:text="Year"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/tvRecebeNome" />
 
     <TextView
@@ -50,12 +50,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:gravity="center_horizontal"
         android:text="Studio"
-        android:layout_marginBottom="160dp"
+        android:layout_marginBottom="132dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/tvYear" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
