--- a/app/src/main/res/layout/game_add.xml
+++ b/app/src/main/res/layout/game_add.xml
@@ -1,50 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/ivRecebeFoto"
-        app:layout_constraintBottom_toTopOf="@id/tvRecebeNome"
-        android:layout_width="200dp"
+        android:id="@+id/newFoto"
+        android:src="@drawable/img"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toTopOf="@id/newNome"
+        android:layout_width="300dp"
         android:layout_height="200dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/tvRecebeNome"
+        android:id="@+id/newNome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="16dp"
         android:hint="Name of the Game"
         app:layout_constraintBottom_toTopOf="@+id/tvYear"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@id/ivRecebeFoto" />
+        app:layout_constraintTop_toBottomOf="@id/newFoto" />
 
     <EditText
         android:id="@+id/tvYear"
-        app:layout_constraintBottom_toTopOf="@id/tvStudio"
+        app:layout_constraintBottom_toTopOf="@id/newStudio"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:layout_marginTop="16dp"
         android:hint="Year"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/tvRecebeNome" />
+        app:layout_constraintTop_toBottomOf="@id/newNome" />
 
     <EditText
-        android:id="@+id/tvStudio"
+        android:id="@+id/newStudio"
         android:layout_marginHorizontal="16dp"
         android:layout_width="match_parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:hint="Studio"
-        android:layout_marginBottom="132dp"
+        android:layout_marginBottom="104dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/tvYear" />
