--- a/app/src/main/res/layout/game_card_layout.xml
+++ b/app/src/main/res/layout/game_card_layout.xml
@@ -6,12 +6,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:orientation="horizontal"
-        android:layout_marginLeft="8dp">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/ivGame"
@@ -27,12 +24,12 @@
             android:layout_marginStart="8dp"
             android:id="@+id/tvGame"
             android:textSize="20sp"
-            android:textAlignment="center"
             android:text="Name of the Game"
+            android:gravity="center"
+            android:layout_weight="1"
             android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
