--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -1,53 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start"
+    android:id="@+id/drawerLayout"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tlGame"
-        app:tabMode="fixed"
+    <com.google.android.material.navigation.NavigationView
+        app:menu="@menu/menu"
+        app:headerLayout="@layout/header"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent" />
 
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tiSnes"
-            android:text="Super Nintendo"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
+
+        <include
+            android:id="@+id/idToolBar"
+            layout="@layout/toolbar" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tlGame"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/idToolBar"
+            app:tabMode="fixed">
 
-        <com.google.android.material.tabs.TabItem
-            android:text="Game Boy Advanced"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tiSnes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Super Nintendo" />
 
-        <com.google.android.material.tabs.TabItem
-            android:text="Playstation One"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tiGba"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Game Boy Advanced" />
 
-    </com.google.android.material.tabs.TabLayout>
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tiPso"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Playstation One" />
 
-        <ListView
-            android:id="@+id/lvGame"
-            android:layout_marginTop="48dp"
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vpGames"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:layout_below="@+id/tlGame" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAdd"
-        android:src="@drawable/ic_baseline_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:backgroundTint="#FF0000"
-        style="@style/fab_material"
-        android:layout_marginBottom="10dp"
-        android:tint="#FF0000"
-        app:backgroundTint="#FF0000"
-        android:layout_margin="16dp"
-        android:contentDescription="Add Game" />
+    </RelativeLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
