--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -1,36 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    android:id="@+id/drawerLayout"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <com.google.android.material.navigation.NavigationView
-        app:menu="@menu/menu"
-        app:headerLayout="@layout/header"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
-
     <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".MainActivity"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:layout_height="match_parent">
 
         <include
-            android:id="@+id/idToolBar"
+            android:id="@+id/ToolBar"
             layout="@layout/toolbar" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tlGame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/idToolBar"
+            android:layout_below="@+id/ToolBar"
             app:tabMode="fixed">
 
             <com.google.android.material.tabs.TabItem
@@ -60,5 +45,3 @@
             android:layout_below="@+id/tlGame" />
 
     </RelativeLayout>
-
-</androidx.drawerlayout.widget.DrawerLayout>
